# scraper-tedawards

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  schema.sql
tedawards/: config.py  database.py  hashing.py  main.py  models.py  parser.py  reference_data.py  schema.py  scraper.py  utils.py
tedawards/parsers/: __init__.py  base.py  eforms_ubl.py  factory.py  ted_internal_ojs.py  ted_legacy.py  ted_meta_xml.py  ted_r207.py  ted_r209.py  ted_text.py  ted_v2.py
tests/: test_parsers.py  test_scraper.py
tests/fixtures/: README.md  eforms_ubl_2025.xml  eforms_ubl_2025_alt.xml  ted_internal_ojs_r2_0_5_2008.en  ted_v2_r2_0_7_2011.xml  ted_v2_r2_0_8_2015.xml  ted_v2_r2_0_9_2024.xml
tests/parsers/: test_eforms_ubl.py  test_factory.py  test_ted_internal_ojs.py  test_ted_meta_xml.py  test_ted_v2.py
